src/test/ui/allocator-submodule.stderr
error: `global_allocator` cannot be used in submodules
  --> $DIR/allocator-submodule.rs:34:5
   |
LL |     static MY_HEAP: MyAlloc = MyAlloc; //~ ERROR global_allocator
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

